<resources>
    <string name="app_name">AdminGraviFlex</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to Login -->
    <string name="insert_name">Ingrese Nombre</string>
    <string name="insert_firtlastname">Ingrese Apellido Paterno</string>
    <string name="insert_seconlastname">Ingrese Apellido Materno</string>
    <string name="insert_gear">Ingrese Edad</string>
    <string name="insert_user">Ingrese Usuario</string>
    <string name="insert_password">Ingrese Clave</string>
    <string name="insert_password_confirm">Ingrese Clave de Confirmacion</string>
    <string name="insert_email">Ingrese Correo</string>

    <string name="prompt_email">Ingrese Usuario</string>
    <string name="prompt_password">Ingrese Clave</string>
    <string name="action_signin">Ya tengo Cuenta</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_signup">Crear</string>
    <string name="action_sign_up">Crear Cuenta</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Egresos">Egresos</string>
    <string name="Ingresos">Ingresos</string>
    <string name="Obras">Obras</string>
    <string name="valoraciones">Valoraciones</string>
</resources>
