<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.scripgo.www.admingraviflex.activitys.SignUpActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="60px"
            android:layout_marginTop="100px"
            android:layout_marginRight="60px"
            android:layout_marginBottom="80px"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                style="@style/edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/insert_name"
                    android:imeActionId="@+id/edt_usuario"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_apellido_paterno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/insert_firtlastname"
                    android:imeActionId="@+id/edt_apellido_paterno"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_apellido_materno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/insert_seconlastname"
                    android:imeActionId="@+id/edt_apellido_materno"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                style="@style/edt"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_edad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/insert_gear"
                    android:imeActionId="@+id/edt_edad"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                style="@style/edt"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/insert_user"
                    android:imeActionId="@+id/edt_usuario"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                style="@style/edt"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_clave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/insert_password"
                    android:imeActionId="@+id/edt_clave"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                style="@style/edt"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_clave_confirmacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/insert_password_confirm"
                    android:imeActionId="@+id/edt_clave_confirmacion"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                style="@style/edt"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/insert_email"
                    android:imeActionId="@+id/edt_correo"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_crear"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/blue_500"
                android:text="@string/action_signup"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_mostrar_signin"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/background_button"
                android:text="@string/action_signin"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>