<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.scripgo.www.admingraviflex.activitys.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="60px"
                android:layout_marginTop="100px"
                android:layout_marginRight="60px"
                android:layout_marginBottom="80px"
                android:layout_alignParentStart="true">

                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="300px"
                    android:layout_height="300px"
                    android:background="@drawable/background_image_logo"
                    android:layout_marginBottom="100px"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    style="@style/edt"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_usuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:imeActionId="@+id/edt_usuario"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    style="@style/edt"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_clave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/edt_clave"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_entrar"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/blue_500"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_mostrar_signup"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/background_button"
                    android:text="@string/action_sign_up"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

</ScrollView>
